Conflict Prep for Big Merge from FRKTMB to upgrade to FRKv2

--- a/vignettes/FRK_bib.bib
+++ b/vignettes/FRK_bib.bib
@@ -88,7 +88,7 @@
     author = {Nychka, D. and Hammerling, D. and Sain, S. and Lenssen, N.},
     year = {2015},
     note = {R package version 5.4-1},
-    url = {http://CRAN.R-project.org/package=LatticeKrig},
+    url = {https://CRAN.R-project.org/package=LatticeKrig},
   }
 
   @article{Schlather_2015,
@@ -134,7 +134,7 @@
   author = {Davis, T.},
   title = {{SPARSEINV: a MATLAB toolbox for computing the sparse inverse subset using the Takahashi equations}},
   year = 2011,
-  url = {http://faculty.cse.tamu.edu/davis/suitesparse.html}
+  url = {https://faculty.cse.tamu.edu/davis/suitesparse.html}
 }
 
 @article{Sampson_1992,
@@ -348,7 +348,7 @@
     year = {2011},
     volume = {3},
     pages = {5--10},
-    url = {http://journal.r-project.org/archive/2011-1/RJournal_2011-1_Wickham.pdf},
+    url = {https://journal.r-project.org/archive/2011-1/RJournal_2011-1_Wickham.pdf},
   }
 
 @Manual{Covr,
@@ -391,7 +391,7 @@
     author = {Douglas Bates and Martin Maechler},
     year = {2015},
     note = {R package version 1.2-0},
-    url = {http://CRAN.R-project.org/package=Matrix},
+    url = {https://CRAN.R-project.org/package=Matrix},
   }
 
   @article{Furrer_2010,
